--- a/project.yaml
+++ b/project.yaml
@@ -2918,3 +2918,21 @@ actions:
       moderately_sensitive:
         table1: output/data/CC_imputation_sample_multivariate_t2d.csv
         table2: output/data/CC_imputation_multivariate_t2d.csv
+
+
+  CC_MICE_7:
+    run: r:latest analysis/ethnicity_check/MICE/eth_corrected_MICE_univariate_hypertension.R --output-dir=output/data 
+    needs: [CC_MICE_1]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_imputation_sample_univariate_hypertension.csv
+        table2: output/data/CC_imputation_univariate_hypertension.csv
+        table3: output/data/CC_imputation_sample_pop_demographic_round_hypertension.csv
+
+  CC_MICE_8:
+    run: r:latest analysis/ethnicity_check/MICE/eth_corrected_MICE_multivariate_hypertension.R --output-dir=output/data 
+    needs: [CC_MICE_1]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_imputation_sample_multivariate_hypertension.csv
+        table2: output/data/CC_imputation_multivariate_hypertension.csv
