--- a/project.yaml
+++ b/project.yaml
@@ -2966,3 +2966,10 @@ actions:
     outputs:
       moderately_sensitive:
         table1: output/data/DWMP_2019_2021_summary_BMI_year.csv
+
+  DWMP_last_BMI_data:
+    run: r:latest analysis/DWMP_eligibility/DWMP_last_bmi.R/DWMP_last_bmi_data.R --output-dir=output/data 
+    needs: [generate_complete_long_BMI_data]
+    outputs: 
+      highly_sensitive:
+        table1: output/data/DWMP_most_recent_BMI.feather
