--- a/project.yaml
+++ b/project.yaml
@@ -2973,3 +2973,11 @@ actions:
     outputs: 
       highly_sensitive:
         table1: output/data/DWMP_most_recent_BMI.feather
+
+
+  DWMP_delta_change_t2d:
+    run: r:latest analysis/ethnicity_check/eth_corrected_top_decile_change/eth_corrected_topdecchange_t2dm_models_2.R --output-dir=output/data 
+    needs: [complete_case_stratified_delta_change_data]
+    outputs: 
+      moderately_sensitive:
+        table1: output/data/change_90th_t2dm_models_2.csv
